Changed the experience.tsx for consigment card overlapping in mobile view. Fixed the global css for extra white space in mobile view, changed the products font format and animation speed

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,7 @@ body {
 .scrollbar-hide::-webkit-scrollbar {
   display: none; /* Chrome, Safari, and Opera */
 }
+
+html, body {
+  overflow-x: hidden;
+}
